cmake_minimum_required(VERSION 3.29)
project(ICPC0)

set(CMAKE_CXX_STANDARD 14)

add_executable(ICPC0
    APivotalQuestion.cpp
    BRoadBand.cpp
    CodingCompany.cpp
    CoinCombinationsI.cpp
    CoinCombinationsII.cpp
    CommonDivisors.cpp
    ContestAdvancement.cpp
    Cornhusker.cpp
    ExponentationII.cpp
    MaximumOfGCDs.cpp
    MinimizeTheDifference.cpp
    MoorioKart.cpp
    NOI_Knapsack.cpp
    OracAndLCM.cpp
    Product1ModuloN.cpp
    SubsetSumQueries.cpp
    Sumdiv.cpp
    SumOfDivisors.cpp
    TalentShow.cpp)
